# claw-bench

./: README.md  README.zh-CN.md  pyproject.toml
config/: quick_tasks.yaml
docker/: docker-compose.prod.yml
docker/server/: Dockerfile
docs/: adapter-sdk.md
leaderboard/public/: skill.md
leaderboard/src/app/: HomeHeader.tsx  LeaderboardTable.tsx  Nav.tsx  i18n.tsx
scripts/: enhance_verifiers.py  generate_task_from_proposal.py  quickstart.sh  run_5models.sh  run_5models_parallel.sh
skills/: skill.md
src/claw_bench/cli/: init.py
src/claw_bench/core/: runner.py  task_loader.py  test_tiers.py  verifier.py
src/claw_bench/server/: admin.py  app.py  submit_api.py  task_generator.py
src/claw_bench/submission/: uploader.py
tasks/: conftest.py
tasks/academic-research/acad-002-literature-review/: instruction.md  task.toml
tasks/academic-research/acad-003-statistical-analysis/: instruction.md  task.toml
tasks/academic-research/acad-004-plagiarism-check/: instruction.md  task.toml
tasks/academic-research/acad-005-metadata-extraction/: instruction.md  task.toml
tasks/accounting/acct-001-journal-entries/: instruction.md  task.toml
tasks/accounting/acct-002-trial-balance/: instruction.md  task.toml
tasks/accounting/acct-003-depreciation/: instruction.md  task.toml
tasks/accounting/acct-004-bank-reconciliation/: instruction.md  task.toml
tasks/accounting/acct-005-financial-statements/: instruction.md  task.toml
tasks/bioinformatics/bio-001-sequence-analysis/: instruction.md  task.toml
tasks/bioinformatics/bio-002-protein-alignment/: instruction.md  task.toml
tasks/bioinformatics/bio-003-gene-expression/: instruction.md  task.toml
tasks/bioinformatics/bio-004-phylogenetic/: instruction.md  task.toml
tasks/bioinformatics/bio-005-variant-annotation/: instruction.md  task.toml
tasks/clinical-data/med-002-lab-abnormality/: instruction.md  task.toml
tasks/clinical-data/med-003-drug-interaction/: instruction.md  task.toml
tasks/clinical-data/med-004-icd-coding/: instruction.md  task.toml
tasks/clinical-data/med-005-trial-eligibility/: instruction.md  task.toml
tasks/content-analysis/cont-001-sentiment-analysis/: instruction.md  task.toml
tasks/content-analysis/cont-002-topic-modeling/: instruction.md  task.toml
tasks/content-analysis/cont-003-readability-audit/: instruction.md  task.toml
tasks/content-analysis/cont-004-media-bias/: instruction.md  task.toml
tasks/content-analysis/cont-005-translation-qa/: instruction.md  task.toml
tasks/contract-review/law-002-lease-analysis/: instruction.md  task.toml
tasks/contract-review/law-003-compliance-check/: instruction.md  task.toml
tasks/contract-review/law-004-ip-license-review/: instruction.md  task.toml
tasks/contract-review/law-005-merger-due-diligence/: instruction.md  task.toml
tasks/cs-engineering/cs-002-db-migration/: instruction.md  task.toml
tasks/cs-engineering/cs-003-log-analyzer/: instruction.md  task.toml
tasks/cs-engineering/cs-004-ci-pipeline/: instruction.md  task.toml
tasks/cs-engineering/cs-005-api-design/: instruction.md  task.toml
tasks/data-science/ds-002-ab-testing/: instruction.md  task.toml
tasks/data-science/ds-003-feature-engineering/: instruction.md  task.toml
tasks/data-science/ds-004-time-series/: instruction.md  task.toml
tasks/data-science/ds-005-anomaly-detection/: instruction.md  task.toml
tasks/database/db-001/: instruction.md  task.toml
tasks/database/db-002/: instruction.md  (+1 more)
(+577 files in other folders)
